RESOLVED FIXED27900
REGRESSION(r46511): Safari crashes on launch on Tiger
https://bugs.webkit.org/show_bug.cgi?id=27900
Summary REGRESSION(r46511): Safari crashes on launch on Tiger
bill fancher
Reported 2009-07-31 16:51:27 PDT
Crash on lauch, with plugins disabled. Doesn't even get to the point where it offers to send crash log. Here's what I dug out of crashlog report manually. You're welcome. Host Name: Bot Date/Time: 2009-07-31 16:42:12.500 -0700 OS Version: 10.4.11 (Build 8S165) Report Version: 4 Command: Safari Path: /Applications/Safari.app/Contents/MacOS/Safari Parent: WindowServer [1525] Version: 4.0.2 (4530.19) PID: 1696 Thread: 0 Exception: EXC_BAD_ACCESS (0x0001) Codes: KERN_PROTECTION_FAILURE (0x0002) at 0x0000003d Thread 0 Crashed: 0 com.apple.Safari 0x000033f0 0x1000 + 9200 1 com.apple.Safari 0x00103cac 0x1000 + 1060012 2 com.apple.Safari 0x00003220 0x1000 + 8736 Thread 1: 0 libSystem.B.dylib 0x9002bfc8 semaphore_wait_signal_trap + 8 1 libSystem.B.dylib 0x90030aac pthread_cond_wait + 480 2 com.apple.JavaScriptCore 0x005a7a9c WTF::TCMalloc_PageHeap::scavengerThread() + 92 3 com.apple.JavaScriptCore 0x005a7c70 JSC::Heap::markOtherThreadConservatively(JSC::Heap::Thread*) + 0 4 libSystem.B.dylib 0x9002b908 _pthread_body + 96 Thread 0 crashed with PPC Thread State 64: srr0: 0x00000000000033f0 srr1: 0x000000000200f030 vrsave: 0x0000000000000000 cr: 0x84000424 xer: 0x0000000020000004 lr: 0x00000000000033a0 ctr: 0x00000000900013a0 r0: 0x0000000000003398 r1: 0x00000000bffff9c0 r2: 0x00000000002adb48 r3: 0x000000000000003d r4: 0x0000000000000000 r5: 0x0000000000000001 r6: 0x0000000080808080 r7: 0x0000000000000031 r8: 0x0000000000000053 r9: 0x0000000000221924 r10: 0x0000000000000001 r11: 0x00000000a00061ec r12: 0x00000000900013a0 r13: 0x0000000000000000 r14: 0x0000000000000000 r15: 0x0000000000000000 r16: 0x0000000000000000 r17: 0x0000000000000000 r18: 0x0000000000000000 r19: 0x0000000000000000 r20: 0x0000000000000000 r21: 0x0000000000000000 r22: 0x0000000000000000 r23: 0x0000000000000000 r24: 0x00000000bffffaf0 r25: 0x0000000000000003 r26: 0x0000000000220000 r27: 0x000000000000003d r28: 0x000000000000003d r29: 0x0000000000000000 r30: 0x0000000000000000 r31: 0x00000000bffffd4d Binary Images Description: 0x1000 - 0x29ffff com.apple.Safari 4.0.2 (4530.19) /Applications/Safari.app/Contents/MacOS/Safari 0x2ec000 - 0x2effff WebKitNightlyEnabler.dylib /Applications/WebKit.app/Contents/Resources/WebKitNightlyEnabler.dylib 0x405000 - 0x4effff com.apple.WebKit r46631 (532.0+) /Applications/WebKit.app/Contents/Frameworks/10.4/WebKit.framework/Versions/A/WebKit 0x582000 - 0x594fff com.apple.SyndicationUI 1.0.8 (56.1) /System/Library/PrivateFrameworks/SyndicationUI.framework/Versions/A/SyndicationUI 0x5a2000 - 0x6c7fff com.apple.JavaScriptCore 532+ (532.0+) /Applications/WebKit.app/Contents/Frameworks/10.4/JavaScriptCore.framework/Versions/A/JavaScriptCore 0x716000 - 0x74bfff com.apple.Syndication 1.0.8 (56.1) /System/Library/PrivateFrameworks/Syndication.framework/Versions/A/Syndication 0x772000 - 0x796fff org.andymatuschak.Sparkle 1.5 Beta (bzr) (356) /Applications/WebKit.app/Contents/Frameworks/10.4/Sparkle.framework/Versions/A/Sparkle 0x1008000 - 0x19fafff com.apple.WebCore 532+ (532.0+) /Applications/WebKit.app/Contents/Frameworks/10.4/WebCore.framework/Versions/A/WebCore 0x8fe00000 - 0x8fe52fff dyld 46.16 /usr/lib/dyld 0x90000000 - 0x901bcfff libSystem.B.dylib /usr/lib/libSystem.B.dylib 0x90214000 - 0x90219fff libmathCommon.A.dylib /usr/lib/system/libmathCommon.A.dylib 0x9021b000 - 0x90268fff com.apple.CoreText 1.0.4 (???) /System/Library/Frameworks/ApplicationServices.framework/Versions/A/Frameworks/CoreText.framework/Versions/A/CoreText 0x90293000 - 0x90344fff ATS /System/Library/Frameworks/ApplicationServices.framework/Versions/A/Frameworks/ATS.framework/Versions/A/ATS 0x90373000 - 0x9072efff com.apple.CoreGraphics 1.258.84 (???) /System/Library/Frameworks/ApplicationServices.framework/Versions/A/Frameworks/CoreGraphics.framework/Versions/A/CoreGraphics 0x907bb000 - 0x90895fff com.apple.CoreFoundation 6.4.11 (368.35) /System/Library/Frameworks/CoreFoundation.framework/Versions/A/CoreFoundation 0x908de000 - 0x908defff com.apple.CoreServices 10.4 (???) /System/Library/Frameworks/CoreServices.framework/Versions/A/CoreServices 0x908e0000 - 0x909e2fff libicucore.A.dylib /usr/lib/libicucore.A.dylib 0x90a3c000 - 0x90ac0fff libobjc.A.dylib /usr/lib/libobjc.A.dylib 0x90aea000 - 0x90b5afff com.apple.framework.IOKit 1.4 (???) /System/Library/Frameworks/IOKit.framework/Versions/A/IOKit 0x90b70000 - 0x90b82fff libauto.dylib /usr/lib/libauto.dylib 0x90b89000 - 0x90e60fff com.apple.CoreServices.CarbonCore 681.19 /System/Library/Frameworks/CoreServices.framework/Versions/A/Frameworks/CarbonCore.framework/Versions/A/CarbonCore 0x90ec6000 - 0x90f46fff com.apple.CoreServices.OSServices 4.1 /System/Library/Frameworks/CoreServices.framework/Versions/A/Frameworks/OSServices.framework/Versions/A/OSServices 0x90f90000 - 0x90fd2fff com.apple.CFNetwork 129.24 /System/Library/Frameworks/CoreServices.framework/Versions/A/Frameworks/CFNetwork.framework/Versions/A/CFNetwork 0x90fe7000 - 0x90ffffff com.apple.WebServices 1.1.2 (1.1.0) /System/Library/Frameworks/CoreServices.framework/Versions/A/Frameworks/WebServicesCore.framework/Versions/A/WebServicesCore 0x9100f000 - 0x91090fff com.apple.SearchKit 1.0.8 /System/Library/Frameworks/CoreServices.framework/Versions/A/Frameworks/SearchKit.framework/Versions/A/SearchKit 0x910d6000 - 0x91100fff com.apple.Metadata 10.4.4 (121.36) /System/Library/Frameworks/CoreServices.framework/Versions/A/Frameworks/Metadata.framework/Versions/A/Metadata 0x91111000 - 0x9111ffff libz.1.dylib /usr/lib/libz.1.dylib 0x91122000 - 0x912ddfff com.apple.security 4.6 (29770) /System/Library/Frameworks/Security.framework/Versions/A/Security 0x913dc000 - 0x913e5fff com.apple.DiskArbitration 2.1.2 /System/Library/Frameworks/DiskArbitration.framework/Versions/A/DiskArbitration 0x913ec000 - 0x913f4fff libbsm.dylib /usr/lib/libbsm.dylib 0x913f8000 - 0x91420fff com.apple.SystemConfiguration 1.8.3 /System/Library/Frameworks/SystemConfiguration.framework/Versions/A/SystemConfiguration 0x91433000 - 0x9143efff libgcc_s.1.dylib /usr/lib/libgcc_s.1.dylib 0x91443000 - 0x914befff com.apple.audio.CoreAudio 3.0.5 /System/Library/Frameworks/CoreAudio.framework/Versions/A/CoreAudio 0x914fb000 - 0x914fbfff com.apple.ApplicationServices 10.4 (???) /System/Library/Frameworks/ApplicationServices.framework/Versions/A/ApplicationServices 0x914fd000 - 0x91535fff com.apple.AE 312.2 /System/Library/Frameworks/ApplicationServices.framework/Versions/A/Frameworks/AE.framework/Versions/A/AE 0x91550000 - 0x91622fff com.apple.ColorSync 4.4.11 /System/Library/Frameworks/ApplicationServices.framework/Versions/A/Frameworks/ColorSync.framework/Versions/A/ColorSync 0x91675000 - 0x91706fff com.apple.print.framework.PrintCore 4.6 (177.13) /System/Library/Frameworks/ApplicationServices.framework/Versions/A/Frameworks/PrintCore.framework/Versions/A/PrintCore 0x9174d000 - 0x91804fff com.apple.QD 3.10.28 (???) /System/Library/Frameworks/ApplicationServices.framework/Versions/A/Frameworks/QD.framework/Versions/A/QD 0x91841000 - 0x9189ffff com.apple.HIServices 1.5.3 (???) /System/Library/Frameworks/ApplicationServices.framework/Versions/A/Frameworks/HIServices.framework/Versions/A/HIServices 0x918ce000 - 0x918f2fff com.apple.LangAnalysis 1.6.1 /System/Library/Frameworks/ApplicationServices.framework/Versions/A/Frameworks/LangAnalysis.framework/Versions/A/LangAnalysis 0x91906000 - 0x9192bfff com.apple.FindByContent 1.5 /System/Library/Frameworks/ApplicationServices.framework/Versions/A/Frameworks/FindByContent.framework/Versions/A/FindByContent 0x9193e000 - 0x91980fff com.apple.LaunchServices 183.1 /System/Library/Frameworks/ApplicationServices.framework/Versions/A/Frameworks/LaunchServices.framework/Versions/A/LaunchServices 0x9199c000 - 0x919b0fff com.apple.speech.synthesis.framework 3.3 /System/Library/Frameworks/ApplicationServices.framework/Versions/A/Frameworks/SpeechSynthesis.framework/Versions/A/SpeechSynthesis 0x919be000 - 0x91a04fff com.apple.ImageIO.framework 1.5.8 /System/Library/Frameworks/ApplicationServices.framework/Versions/A/Frameworks/ImageIO.framework/Versions/A/ImageIO 0x91a1b000 - 0x91ae2fff libcrypto.0.9.7.dylib /usr/lib/libcrypto.0.9.7.dylib 0x91b30000 - 0x91b45fff libcups.2.dylib /usr/lib/libcups.2.dylib 0x91b4a000 - 0x91b68fff libJPEG.dylib /System/Library/Frameworks/ApplicationServices.framework/Versions/A/Frameworks/ImageIO.framework/Versions/A/Resources/libJPEG.dylib 0x91b6e000 - 0x91c25fff libJP2.dylib /System/Library/Frameworks/ApplicationServices.framework/Versions/A/Frameworks/ImageIO.framework/Versions/A/Resources/libJP2.dylib 0x91c74000 - 0x91c78fff libGIF.dylib /System/Library/Frameworks/ApplicationServices.framework/Versions/A/Frameworks/ImageIO.framework/Versions/A/Resources/libGIF.dylib 0x91c7a000 - 0x91ce4fff libRaw.dylib /System/Library/Frameworks/ApplicationServices.framework/Versions/A/Frameworks/ImageIO.framework/Versions/A/Resources/libRaw.dylib 0x91ce9000 - 0x91d03fff libPng.dylib /System/Library/Frameworks/ApplicationServices.framework/Versions/A/Frameworks/ImageIO.framework/Versions/A/Resources/libPng.dylib 0x91d08000 - 0x91d0bfff libRadiance.dylib /System/Library/Frameworks/ApplicationServices.framework/Versions/A/Frameworks/ImageIO.framework/Versions/A/Resources/libRadiance.dylib 0x91d0d000 - 0x91dfbfff libxml2.2.dylib /usr/lib/libxml2.2.dylib 0x91e1a000 - 0x91e58fff libTIFF.dylib /System/Library/Frameworks/ApplicationServices.framework/Versions/A/Frameworks/ImageIO.framework/Versions/A/Resources/libTIFF.dylib 0x91e5f000 - 0x91e5ffff com.apple.Accelerate 1.2.2 (Accelerate 1.2.2) /System/Library/Frameworks/Accelerate.framework/Versions/A/Accelerate 0x91e61000 - 0x91f46fff com.apple.vImage 2.4 /System/Library/Frameworks/Accelerate.framework/Versions/A/Frameworks/vImage.framework/Versions/A/vImage 0x91f4e000 - 0x91f6dfff com.apple.Accelerate.vecLib 3.2.2 (vecLib 3.2.2) /System/Library/Frameworks/Accelerate.framework/Versions/A/Frameworks/vecLib.framework/Versions/A/vecLib 0x91fd9000 - 0x92047fff libvMisc.dylib /System/Library/Frameworks/Accelerate.framework/Versions/A/Frameworks/vecLib.framework/Versions/A/libvMisc.dylib 0x92052000 - 0x920e7fff libvDSP.dylib /System/Library/Frameworks/Accelerate.framework/Versions/A/Frameworks/vecLib.framework/Versions/A/libvDSP.dylib 0x92101000 - 0x92689fff libBLAS.dylib /System/Library/Frameworks/Accelerate.framework/Versions/A/Frameworks/vecLib.framework/Versions/A/libBLAS.dylib 0x926bc000 - 0x929e7fff libLAPACK.dylib /System/Library/Frameworks/Accelerate.framework/Versions/A/Frameworks/vecLib.framework/Versions/A/libLAPACK.dylib 0x92a17000 - 0x92b05fff libiconv.2.dylib /usr/lib/libiconv.2.dylib 0x92b08000 - 0x92b90fff com.apple.DesktopServices 1.3.7 /System/Library/PrivateFrameworks/DesktopServicesPriv.framework/Versions/A/DesktopServicesPriv 0x92bd1000 - 0x92e04fff com.apple.Foundation 6.4.12 (567.42) /System/Library/Frameworks/Foundation.framework/Versions/C/Foundation 0x92f37000 - 0x92f55fff libGL.dylib /System/Library/Frameworks/OpenGL.framework/Versions/A/Libraries/libGL.dylib 0x92f60000 - 0x92fbafff libGLU.dylib /System/Library/Frameworks/OpenGL.framework/Versions/A/Libraries/libGLU.dylib 0x92fd8000 - 0x92fd8fff com.apple.Carbon 10.4 (???) /System/Library/Frameworks/Carbon.framework/Versions/A/Carbon 0x92fda000 - 0x92feefff com.apple.ImageCapture 3.0 /System/Library/Frameworks/Carbon.framework/Versions/A/Frameworks/ImageCapture.framework/Versions/A/ImageCapture 0x93006000 - 0x93016fff com.apple.speech.recognition.framework 3.4 /System/Library/Frameworks/Carbon.framework/Versions/A/Frameworks/SpeechRecognition.framework/Versions/A/SpeechRecognition 0x93022000 - 0x93037fff com.apple.securityhi 2.0 (203) /System/Library/Frameworks/Carbon.framework/Versions/A/Frameworks/SecurityHI.framework/Versions/A/SecurityHI 0x93049000 - 0x930d0fff com.apple.ink.framework 101.2 (69) /System/Library/Frameworks/Carbon.framework/Versions/A/Frameworks/Ink.framework/Versions/A/Ink 0x930e4000 - 0x930effff com.apple.help 1.0.3 (32) /System/Library/Frameworks/Carbon.framework/Versions/A/Frameworks/Help.framework/Versions/A/Help 0x930f9000 - 0x93127fff com.apple.openscripting 1.2.7 (???) /System/Library/Frameworks/Carbon.framework/Versions/A/Frameworks/OpenScripting.framework/Versions/A/OpenScripting 0x93141000 - 0x93151fff com.apple.print.framework.Print 5.0 (190.1) /System/Library/Frameworks/Carbon.framework/Versions/A/Frameworks/Print.framework/Versions/A/Print 0x9315d000 - 0x931c3fff com.apple.htmlrendering 1.1.2 /System/Library/Frameworks/Carbon.framework/Versions/A/Frameworks/HTMLRendering.framework/Versions/A/HTMLRendering 0x931f4000 - 0x93243fff com.apple.NavigationServices 3.4.4 (3.4.3) /System/Library/Frameworks/Carbon.framework/Versions/A/Frameworks/NavigationServices.framework/Versions/A/NavigationServices 0x93271000 - 0x9328efff com.apple.audio.SoundManager 3.9 /System/Library/Frameworks/Carbon.framework/Versions/A/Frameworks/CarbonSound.framework/Versions/A/CarbonSound 0x932a0000 - 0x932adfff com.apple.CommonPanels 1.2.2 (73) /System/Library/Frameworks/Carbon.framework/Versions/A/Frameworks/CommonPanels.framework/Versions/A/CommonPanels 0x932b6000 - 0x935c4fff com.apple.HIToolbox 1.4.10 (???) /System/Library/Frameworks/Carbon.framework/Versions/A/Frameworks/HIToolbox.framework/Versions/A/HIToolbox 0x93714000 - 0x93720fff com.apple.opengl 1.4.7 /System/Library/Frameworks/OpenGL.framework/Versions/A/OpenGL 0x93725000 - 0x93745fff com.apple.DirectoryService.Framework 3.1 /System/Library/Frameworks/DirectoryService.framework/Versions/A/DirectoryService 0x93799000 - 0x93799fff com.apple.Cocoa 6.4 (???) /System/Library/Frameworks/Cocoa.framework/Versions/A/Cocoa 0x9379b000 - 0x93dcefff com.apple.AppKit 6.4.10 (824.48) /System/Library/Frameworks/AppKit.framework/Versions/C/AppKit 0x9415b000 - 0x941cdfff com.apple.CoreData 91 (92.1) /System/Library/Frameworks/CoreData.framework/Versions/A/CoreData 0x94206000 - 0x942cbfff com.apple.audio.toolbox.AudioToolbox 1.4.7 /System/Library/Frameworks/AudioToolbox.framework/Versions/A/AudioToolbox 0x9431e000 - 0x9431efff com.apple.audio.units.AudioUnit 1.4 /System/Library/Frameworks/AudioUnit.framework/Versions/A/AudioUnit 0x94320000 - 0x944e0fff com.apple.QuartzCore 1.4.12 /System/Library/Frameworks/QuartzCore.framework/Versions/A/QuartzCore 0x9452a000 - 0x94567fff libsqlite3.0.dylib /usr/lib/libsqlite3.0.dylib 0x9456f000 - 0x945bffff libGLImage.dylib /System/Library/Frameworks/OpenGL.framework/Versions/A/Libraries/libGLImage.dylib 0x945c8000 - 0x945e1fff com.apple.CoreVideo 1.4.2 /System/Library/Frameworks/CoreVideo.framework/Versions/A/CoreVideo 0x9467a000 - 0x946bcfff com.apple.vmutils 4.0.2 (93.1) /System/Library/PrivateFrameworks/vmutils.framework/Versions/A/vmutils 0x94702000 - 0x9471efff com.apple.securityfoundation 2.2 (27710) /System/Library/Frameworks/SecurityFoundation.framework/Versions/A/SecurityFoundation 0x94732000 - 0x94776fff com.apple.securityinterface 2.2 (27692) /System/Library/Frameworks/SecurityInterface.framework/Versions/A/SecurityInterface 0x94c3f000 - 0x94cb0fff libstdc++.6.dylib /usr/lib/libstdc++.6.dylib 0x94e26000 - 0x94f56fff com.apple.AddressBook.framework 4.0.6 (490) /System/Library/Frameworks/AddressBook.framework/Versions/A/AddressBook 0x94fe9000 - 0x94ff8fff com.apple.DSObjCWrappers.Framework 1.1 /System/Library/PrivateFrameworks/DSObjCWrappers.framework/Versions/A/DSObjCWrappers 0x95000000 - 0x9502dfff com.apple.LDAPFramework 1.4.1 (69.0.1) /System/Library/Frameworks/LDAP.framework/Versions/A/LDAP 0x95034000 - 0x95044fff libsasl2.2.dylib /usr/lib/libsasl2.2.dylib 0x95048000 - 0x95077fff libssl.0.9.7.dylib /usr/lib/libssl.0.9.7.dylib 0x95087000 - 0x950a4fff libresolv.9.dylib /usr/lib/libresolv.9.dylib 0x95b63000 - 0x95b95fff com.apple.PDFKit 1.0.4 /System/Library/Frameworks/Quartz.framework/Versions/A/Frameworks/PDFKit.framework/Versions/A/PDFKit 0x97ca3000 - 0x97d74fff com.apple.QuartzComposer 1.2.6 (32.25) /System/Library/Frameworks/Quartz.framework/Versions/A/Frameworks/QuartzComposer.framework/Versions/A/QuartzComposer 0x97df1000 - 0x97df1fff com.apple.quartzframework 1.0 /System/Library/Frameworks/Quartz.framework/Versions/A/Quartz 0x98331000 - 0x9833efff libbz2.1.0.dylib /usr/lib/libbz2.1.0.dylib
Attachments
Patch: Don't use a background thread to scavenge memory on Tiger until we figure out what causes the crash. (1.13 KB, patch)
2009-08-03 11:27 PDT, Ada Chan
darin: review+
Mark Rowe (bdash)
Comment 1 2009-07-31 18:36:07 PDT
Bill, do you have Safari configured to use a proxy server?
Gustaaf Groenendaal (MysteryQuest)
Comment 2 2009-08-01 03:47:47 PDT
*** Bug 27919 has been marked as a duplicate of this bug. ***
Gustaaf Groenendaal (MysteryQuest)
Comment 3 2009-08-01 03:47:57 PDT
*** Bug 27911 has been marked as a duplicate of this bug. ***
Gustaaf Groenendaal (MysteryQuest)
Comment 4 2009-08-01 04:01:39 PDT
Reported version was 10.5, but crash report says 10.4.11. Seems to be a problem on Tiger only. See also duplicate reports. First guess on cause would be http://trac.webkit.org/changeset/46511
Mark Rowe (bdash)
Comment 5 2009-08-01 12:41:37 PDT
(In reply to comment #4) > Reported version was 10.5, but crash report says 10.4.11. Seems to be a problem > on Tiger only. See also duplicate reports. > > First guess on cause would be http://trac.webkit.org/changeset/46511 There's no Tiger-specific code in that patch that I can see.
Mark Rowe (bdash)
Comment 6 2009-08-01 16:22:58 PDT
Bisecting through builds in the problematic range confirms that r46511 is at fault. If the problem isn't obvious we may want to roll the change out while we investigate the problem.
Mark Rowe (bdash)
Comment 7 2009-08-01 18:42:34 PDT
This doesn't reproduce in my local build of TOT on Tiger. I've tried both Release and Debug with FastMalloc enabled with no luck. Ugh.
John Kieken
Comment 8 2009-08-01 19:02:03 PDT
Quote Mark Rowe: "This doesn't reproduce in my local build of TOT on Tiger. I've tried both Release and Debug with FastMalloc enabled with no luck. Ugh." Could it need PPC and Tiger together? That's my config.
Mark Rowe (bdash)
Comment 9 2009-08-01 19:59:16 PDT
The nightly build crashes on my machine, so it is not specific to PowerPC.
Mark Rowe (bdash)
Comment 10 2009-08-01 20:00:37 PDT
I posted a new nightly build (r46684) that was built with the problematic revision backed out locally. This should make life a little bit easier for Tiger users while we investigate the cause of the problem.
Ada Chan
Comment 11 2009-08-01 22:15:43 PDT
Maybe we can define USE_BACKGROUND_THREAD_TO_SCAVENGE_MEMORY to 0 just for Tiger while we investigate the crash?
Mark Rowe (bdash)
Comment 12 2009-08-01 23:48:23 PDT
That's a good idea.
Ada Chan
Comment 13 2009-08-03 11:27:16 PDT
Created attachment 33992 [details] Patch: Don't use a background thread to scavenge memory on Tiger until we figure out what causes the crash.
Darin Adler
Comment 14 2009-08-03 11:30:31 PDT
Comment on attachment 33992 [details] Patch: Don't use a background thread to scavenge memory on Tiger until we figure out what causes the crash. r=me
Ada Chan
Comment 15 2009-08-03 11:34:57 PDT
Disable flag on Tiger checked in: r46724.
Eric Seidel (no email)
Comment 16 2009-08-03 17:53:07 PDT
Note You need to log in before you can comment on or make changes to this bug.