        Reviewed by Darin Adler.

Don't use background thread to scavenge memory on Tiger until we figure out why it causes a crash.
        https://bugs.webkit.org/show_bug.cgi?id=27900

        * wtf/FastMalloc.cpp:



Canonical link: https://commits.webkit.org/38330@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@46724 268f45cc-cd09-0410-ab3c-d52691b4dbfc